Replace all toDTO methods from models to mappers