@@ -2,6 +2,7 @@ package inzagher.expense.tracker.server.service;
 
 import inzagher.expense.tracker.server.dto.ExpenseDTO;
 import inzagher.expense.tracker.server.dto.ExpenseFilterDTO;
+import inzagher.expense.tracker.server.mapper.ExpenseMapper;
 import inzagher.expense.tracker.server.model.Category;
 import inzagher.expense.tracker.server.model.Expense;
 import inzagher.expense.tracker.server.model.ExpenseFilter;
@@ -9,30 +10,23 @@ import inzagher.expense.tracker.server.model.Person;
 import inzagher.expense.tracker.server.repository.CategoryRepository;
 import inzagher.expense.tracker.server.repository.ExpenseRepository;
 import inzagher.expense.tracker.server.repository.PersonRepository;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.List;
+import java.util.Optional;
+
+@Slf4j
 @Service
 @Transactional
+@RequiredArgsConstructor
 public class ExpenseService {
     private final ExpenseRepository expenseRepository;
     private final CategoryRepository categoryRepository;
     private final PersonRepository personRepository;
-    
-    @Autowired
-    public ExpenseService(
-            ExpenseRepository expenseRepository,
-            CategoryRepository categoryRepository,
-            PersonRepository personRepository
-    ) {
-        this.expenseRepository = expenseRepository;
-        this.categoryRepository = categoryRepository;
-        this.personRepository = personRepository;
-    }
+    private final ExpenseMapper expenseMapper;
 
     public List<ExpenseDTO> findExpenses(ExpenseFilterDTO dto) {
         ExpenseFilter filter = new ExpenseFilter();
@@ -46,12 +40,12 @@ public class ExpenseService {
         dto.getCategoryIdentifiers().forEach(filter.getCategoryIdentifiers()::add);
         dto.getPersonIdentifiers().forEach(filter.getPersonIdentifiers()::add);
         return expenseRepository.find(filter).stream()
-                .map(Expense::toDTO)
-                .collect(Collectors.toList());
+                .map(expenseMapper::toDTO)
+                .toList();
     }
     
     public Optional<ExpenseDTO> getExpenseById(Integer id) {
-        return expenseRepository.findById(id).map(Expense::toDTO);
+        return expenseRepository.findById(id).map(expenseMapper::toDTO);
     }
     
     public Integer storeExpense(ExpenseDTO dto) {
